Fix footer overlap

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12324,8 +12324,15 @@ label,
   border-top-right-radius: 0;
 }
 
-body > #root > div {
-  height: 100vh;
+.page-body {
+  display: flex;
+  flex-direction: column;
+  min-height: 92vh;
+}
+
+.footer {
+  flex: 0 0 50px;
+  margin-top: auto;
 }
 
 .full-height {
